--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -148,6 +148,7 @@ nav {
         -moz-border-radius: 1rem;
         -ms-border-radius: 1rem;
         -o-border-radius: 1rem;
+        display: flex;
         table {
             caption {
             text-align: center;
@@ -222,6 +223,40 @@ nav {
                 cursor: pointer;
             }
         }
+    }
+}
+
+
+.infoBubble {
+    border: 0.1rem solid $plisson_white;
+    border-radius: 1rem;
+    padding: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    width: 25rem;
+    height: 60rem;
+    position: fixed;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    top: 50%;
+    left: 10%;
+    font-size: 1.4rem;
+    h3, h4 {
+        text-transform: uppercase;
+        color: lighten($plisson_red, $amount: 15);
+    }
+    h3 {
+        font-size: 2.4rem;
+        border-bottom: 0.1rem solid $plisson_white;
+        padding-bottom: 1rem;
+    }
+    h4 {
+        font-size: 1.6rem;
     }
 }
 
