--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -150,6 +150,12 @@ nav {
         -o-border-radius: 1rem;
         display: flex;
         table {
+            border: 0.3rem solid $plisson_white;
+        border-radius: 1rem;
+        -webkit-border-radius: 1rem;
+        -moz-border-radius: 1rem;
+        -ms-border-radius: 1rem;
+        -o-border-radius: 1rem;
             caption {
             text-align: center;
             margin-bottom: 2.5rem;
